--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,8 @@
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
 <ul>
-    <li><a href="users">Users</a></li>
-    <li><a href="meals">Meals</a></li>
+    <li><a href="user">Users</a></li>
+    <li><a href="meal">Meals</a></li>
 </ul>
 </body>
 </html>
